--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
   "cSpell.words": [
     "appbar",
+    "Cupertino",
     "erooooooor",
     "productslist",
+    "Schyler",
     "storeapp",
     "wireframe"
   ]
